--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,32 @@
+ body {
+     background-color: black;
+     text-align: center;
+ }
+
+a{
+    font-size: 16px;
+    color: aquamarine;
+}
+
  h1 {
      font-family: Verdana, Geneva, Tahoma, sans-serif;
      font-weight: normal;
      font-size: 50px;
      color: white;
      text-align: center;
+ }
+
+ h2 {
+     font-family: Verdana, Geneva, Tahoma, sans-serif;
+     font-weight: 300;
+     font-size: 42px;
+     color: white;
+     text-align: center;
+ }
+
+ h3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 21px;
+    color: grey;
+    text-align: center;
  }
